done with authentication setup with jwt

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.2.3",
     "pg": "^8.14.1",
     "react": "^19.0.0",
